crates/mega-evm/tests/satin/snapshots/satin__stops__a_call_revived_past_its_budget_hands_its_caller_nothing.snap
---
source: crates/mega-evm/tests/satin/stops.rs
expression: "&BTreeMap::from([(\"plain\", OutcomeView::new(&plain)),\n(\"rewritten\", OutcomeView::new(&outcome)),])"
---
{
  "plain": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 48201,
      "state": 97920,
      "history": 30800,
      "history_bytes": 350,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 176921
    },
    "result_gas": {
      "total_gas_spent": 176921,
      "state_gas_spent": 97920,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 350,
      "write_records": 1
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000500000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000500001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x301aad9e368a0010278393f4febbaa581e9ddb709c5e0a46dcb6db90bbf1aab7",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0xaa",
            "original": "0x0",
            "present": "0x1"
          }
        ]
      },
      "0x0000000000000000000000000000000000bef000": "unchanged",
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "rewritten": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 48201,
      "state": 97920,
      "history": 30800,
      "history_bytes": 350,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 176921
    },
    "result_gas": {
      "total_gas_spent": 176921,
      "state_gas_spent": 97920,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 350,
      "write_records": 1
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000500000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000500001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x301aad9e368a0010278393f4febbaa581e9ddb709c5e0a46dcb6db90bbf1aab7",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0xaa",
            "original": "0x0",
            "present": "0x1"
          }
        ]
      },
      "0x0000000000000000000000000000000000bef000": "unchanged",
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  }
}
