crates/mega-evm/tests/satin/snapshots/satin__stops__a_callee_that_reads_the_timestamp_does_not_make_its_callers_burn_their_gas.snap
---
source: crates/mega-evm/tests/satin/stops.rs
expression: "&summaries(&views)"
---
{
  "depth 1, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 20002996); stop ComputeGas limit 20002996 used 20001896; regular 20016896 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 20044176; data_size 310 write_records 0; logs 0 accounts 5",
  "depth 1, gas limit 100000000, recorded": "revert MegaLimitExceeded(ComputeGas, 20002996); stop ComputeGas limit 20002996 used 20001896; regular 20016896 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 20044176; data_size 310 write_records 0; logs 0 accounts 5",
  "depth 1, gas limit 1000000000": "revert MegaLimitExceeded(ComputeGas, 20002996); stop ComputeGas limit 20002996 used 20001896; regular 20016896 state 0 history 27280 history_bytes 310 reservoir_remaining 799972720 floor 15000 gas_used 20044176; data_size 310 write_records 0; logs 0 accounts 5",
  "depth 1, gas limit 1000000000, recorded": "revert MegaLimitExceeded(ComputeGas, 20002996); stop ComputeGas limit 20002996 used 20001896; regular 20016896 state 0 history 27280 history_bytes 310 reservoir_remaining 799972720 floor 15000 gas_used 20044176; data_size 310 write_records 0; logs 0 accounts 5",
  "depth 1, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 20002996); stop ComputeGas limit 20002996 used 20001896; regular 20016896 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 20044176; data_size 310 write_records 0; logs 0 accounts 5",
  "depth 1, gas limit 300000000, recorded": "revert MegaLimitExceeded(ComputeGas, 20002996); stop ComputeGas limit 20002996 used 20001896; regular 20016896 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 20044176; data_size 310 write_records 0; logs 0 accounts 5",
  "depth 3, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 20008226); stop ComputeGas limit 20008226 used 20007126; regular 20022126 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 20049406; data_size 310 write_records 0; logs 0 accounts 5",
  "depth 3, gas limit 100000000, recorded": "revert MegaLimitExceeded(ComputeGas, 20008226); stop ComputeGas limit 20008226 used 20007126; regular 20022126 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 20049406; data_size 310 write_records 0; logs 0 accounts 5",
  "depth 3, gas limit 1000000000": "revert MegaLimitExceeded(ComputeGas, 20008226); stop ComputeGas limit 20008226 used 20007126; regular 20022126 state 0 history 27280 history_bytes 310 reservoir_remaining 799972720 floor 15000 gas_used 20049406; data_size 310 write_records 0; logs 0 accounts 5",
  "depth 3, gas limit 1000000000, recorded": "revert MegaLimitExceeded(ComputeGas, 20008226); stop ComputeGas limit 20008226 used 20007126; regular 20022126 state 0 history 27280 history_bytes 310 reservoir_remaining 799972720 floor 15000 gas_used 20049406; data_size 310 write_records 0; logs 0 accounts 5",
  "depth 3, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 20008226); stop ComputeGas limit 20008226 used 20007126; regular 20022126 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 20049406; data_size 310 write_records 0; logs 0 accounts 5",
  "depth 3, gas limit 300000000, recorded": "revert MegaLimitExceeded(ComputeGas, 20008226); stop ComputeGas limit 20008226 used 20007126; regular 20022126 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 20049406; data_size 310 write_records 0; logs 0 accounts 5"
}
