crates/mega-evm/tests/satin/snapshots/satin__stops__a_frame_budget_crossed_three_calls_down_reverts_that_frame_alone.snap
---
source: crates/mega-evm/tests/satin/stops.rs
expression: "&summaries(&views)"
---
{
  "DataSize, gas limit 100000000": "success Stop; stop -; regular 652169 state 685440 history 60368 history_bytes 686 reservoir_remaining 0 floor 15000 gas_used 1397977; data_size 686 write_records 7; logs 3 accounts 8",
  "DataSize, gas limit 300000000": "success Stop; stop -; regular 652169 state 685440 history 60368 history_bytes 686 reservoir_remaining 99254192 floor 15000 gas_used 1397977; data_size 686 write_records 7; logs 3 accounts 8",
  "KVUpdate, gas limit 100000000": "success Stop; stop -; regular 2307913 state 783360 history 63888 history_bytes 726 reservoir_remaining 0 floor 15000 gas_used 3155161; data_size 726 write_records 8; logs 3 accounts 8",
  "KVUpdate, gas limit 300000000": "success Stop; stop -; regular 2307913 state 783360 history 63888 history_bytes 726 reservoir_remaining 99152752 floor 15000 gas_used 3155161; data_size 726 write_records 8; logs 3 accounts 8"
}
