crates/mega-evm/tests/satin/snapshots/satin__stops__a_halt_three_calls_down_burns_its_frames_gas_and_its_caller_resumes.snap
---
source: crates/mega-evm/tests/satin/stops.rs
expression: "&summaries(&views)"
---
{
  "0x0000000000000000000000000000000000000001, gas limit 100000000, forwarded 1000": "success Stop; stop -; regular 141825 state 489600 history 53328 history_bytes 606 reservoir_remaining 0 floor 15000 gas_used 684753; data_size 606 write_records 5; logs 3 accounts 8",
  "0x0000000000000000000000000000000000000001, gas limit 100000000, forwarded 2999": "success Stop; stop -; regular 143824 state 489600 history 53328 history_bytes 606 reservoir_remaining 0 floor 15000 gas_used 686752; data_size 606 write_records 5; logs 3 accounts 8",
  "0x0000000000000000000000000000000000000001, gas limit 300000000, forwarded 1000": "success Stop; stop -; regular 141825 state 489600 history 53328 history_bytes 606 reservoir_remaining 99457072 floor 15000 gas_used 684753; data_size 606 write_records 5; logs 3 accounts 8",
  "0x0000000000000000000000000000000000000001, gas limit 300000000, forwarded 2999": "success Stop; stop -; regular 143824 state 489600 history 53328 history_bytes 606 reservoir_remaining 99457072 floor 15000 gas_used 686752; data_size 606 write_records 5; logs 3 accounts 8",
  "0x0000000000000000000000000000000000500004, gas limit 100000000, forwarded 50000": "success Stop; stop -; regular 193325 state 489600 history 53328 history_bytes 606 reservoir_remaining 0 floor 15000 gas_used 736253; data_size 606 write_records 5; logs 3 accounts 8",
  "0x0000000000000000000000000000000000500004, gas limit 100000000, forwarded 80000": "success Stop; stop -; regular 223325 state 489600 history 53328 history_bytes 606 reservoir_remaining 0 floor 15000 gas_used 766253; data_size 606 write_records 5; logs 3 accounts 8",
  "0x0000000000000000000000000000000000500004, gas limit 300000000, forwarded 50000": "success Stop; stop -; regular 193325 state 489600 history 53328 history_bytes 606 reservoir_remaining 99457072 floor 15000 gas_used 736253; data_size 606 write_records 5; logs 3 accounts 8",
  "0x0000000000000000000000000000000000500004, gas limit 300000000, forwarded 80000": "success Stop; stop -; regular 223325 state 489600 history 53328 history_bytes 606 reservoir_remaining 99457072 floor 15000 gas_used 766253; data_size 606 write_records 5; logs 3 accounts 8"
}
