crates/mega-evm/tests/satin/snapshots/satin__stops__a_revived_creation_reports_the_stop.snap
---
source: crates/mega-evm/tests/satin/stops.rs
expression: "&summaries(&views)"
---
{
  "Nested, Compute, gas limit 100000000, plain": "revert MegaLimitExceeded(ComputeGas, 20032404); stop ComputeGas limit 20032404 used 20031304; regular 20046304 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 20073584; data_size 310 write_records 0; logs 0 accounts 5",
  "Nested, Compute, gas limit 100000000, revived": "revert MegaLimitExceeded(ComputeGas, 20032404); stop ComputeGas limit 20032404 used 20031304; regular 20046304 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 20073584; data_size 310 write_records 0; logs 0 accounts 5",
  "Nested, Compute, gas limit 300000000, plain": "revert MegaLimitExceeded(ComputeGas, 20032404); stop ComputeGas limit 20032404 used 20031304; regular 20046304 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 20073584; data_size 310 write_records 0; logs 0 accounts 5",
  "Nested, Compute, gas limit 300000000, revived": "revert MegaLimitExceeded(ComputeGas, 20032404); stop ComputeGas limit 20032404 used 20031304; regular 20046304 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 20073584; data_size 310 write_records 0; logs 0 accounts 5",
  "Nested, DataSize, gas limit 100000000, plain": "revert MegaLimitExceeded(DataSize, 461); stop DataSize limit 461 used 462; regular 69536 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 96816; data_size 310 write_records 0; logs 0 accounts 5",
  "Nested, DataSize, gas limit 100000000, revived": "revert MegaLimitExceeded(DataSize, 461); stop DataSize limit 461 used 462; regular 69536 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 96816; data_size 310 write_records 0; logs 0 accounts 5",
  "Nested, DataSize, gas limit 300000000, plain": "revert MegaLimitExceeded(DataSize, 461); stop DataSize limit 461 used 462; regular 69536 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 96816; data_size 310 write_records 0; logs 0 accounts 5",
  "Nested, DataSize, gas limit 300000000, revived": "revert MegaLimitExceeded(DataSize, 461); stop DataSize limit 461 used 462; regular 69536 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 96816; data_size 310 write_records 0; logs 0 accounts 5",
  "Nested, StateGas, gas limit 100000000, plain": "revert MegaLimitExceeded(StateGrowth, 281519); stop StateGrowth limit 281519 used 281520; regular 69536 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 96816; data_size 310 write_records 0; logs 0 accounts 5",
  "Nested, StateGas, gas limit 100000000, revived": "revert MegaLimitExceeded(StateGrowth, 281519); stop StateGrowth limit 281519 used 281520; regular 69536 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 96816; data_size 310 write_records 0; logs 0 accounts 5",
  "Nested, StateGas, gas limit 300000000, plain": "revert MegaLimitExceeded(StateGrowth, 281519); stop StateGrowth limit 281519 used 281520; regular 69536 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 96816; data_size 310 write_records 0; logs 0 accounts 5",
  "Nested, StateGas, gas limit 300000000, revived": "revert MegaLimitExceeded(StateGrowth, 281519); stop StateGrowth limit 281519 used 281520; regular 69536 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 96816; data_size 310 write_records 0; logs 0 accounts 5",
  "NestedStart, DataSize, gas limit 100000000, plain": "revert MegaLimitExceeded(DataSize, 310); stop DataSize limit 310 used 390; regular 47051 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 74331; data_size 310 write_records 0; logs 0 accounts 5",
  "NestedStart, DataSize, gas limit 100000000, revived": "revert MegaLimitExceeded(DataSize, 310); stop DataSize limit 310 used 390; regular 47051 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 74331; data_size 310 write_records 0; logs 0 accounts 5",
  "NestedStart, DataSize, gas limit 300000000, plain": "revert MegaLimitExceeded(DataSize, 310); stop DataSize limit 310 used 390; regular 47051 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 74331; data_size 310 write_records 0; logs 0 accounts 5",
  "NestedStart, DataSize, gas limit 300000000, revived": "revert MegaLimitExceeded(DataSize, 310); stop DataSize limit 310 used 390; regular 47051 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 74331; data_size 310 write_records 0; logs 0 accounts 5",
  "NestedStart, KvUpdates, gas limit 100000000, plain": "revert MegaLimitExceeded(KVUpdate, 0); stop KVUpdate limit 0 used 2; regular 47051 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 74331; data_size 310 write_records 0; logs 0 accounts 5",
  "NestedStart, KvUpdates, gas limit 100000000, revived": "revert MegaLimitExceeded(KVUpdate, 0); stop KVUpdate limit 0 used 2; regular 47051 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 74331; data_size 310 write_records 0; logs 0 accounts 5",
  "NestedStart, KvUpdates, gas limit 300000000, plain": "revert MegaLimitExceeded(KVUpdate, 0); stop KVUpdate limit 0 used 2; regular 47051 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 74331; data_size 310 write_records 0; logs 0 accounts 5",
  "NestedStart, KvUpdates, gas limit 300000000, revived": "revert MegaLimitExceeded(KVUpdate, 0); stop KVUpdate limit 0 used 2; regular 47051 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 74331; data_size 310 write_records 0; logs 0 accounts 5",
  "NestedStart, StateGas, gas limit 100000000, plain": "revert MegaLimitExceeded(StateGrowth, 0); stop StateGrowth limit 0 used 183600; regular 47051 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 74331; data_size 310 write_records 0; logs 0 accounts 5",
  "NestedStart, StateGas, gas limit 100000000, revived": "revert MegaLimitExceeded(StateGrowth, 0); stop StateGrowth limit 0 used 183600; regular 47051 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 74331; data_size 310 write_records 0; logs 0 accounts 5",
  "NestedStart, StateGas, gas limit 300000000, plain": "revert MegaLimitExceeded(StateGrowth, 0); stop StateGrowth limit 0 used 183600; regular 47051 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 74331; data_size 310 write_records 0; logs 0 accounts 5",
  "NestedStart, StateGas, gas limit 300000000, revived": "revert MegaLimitExceeded(StateGrowth, 0); stop StateGrowth limit 0 used 183600; regular 47051 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 74331; data_size 310 write_records 0; logs 0 accounts 5",
  "Transaction, Compute, gas limit 100000000, plain": "revert MegaLimitExceeded(ComputeGas, 20000381); stop ComputeGas limit 20000381 used 19999281; regular 20023679 state 0 history 29920 history_bytes 340 reservoir_remaining 0 floor 25920 gas_used 20053599; data_size 340 write_records 0; logs 0 accounts 5",
  "Transaction, Compute, gas limit 100000000, revived": "revert MegaLimitExceeded(ComputeGas, 20000381); stop ComputeGas limit 20000381 used 19999281; regular 20023679 state 0 history 29920 history_bytes 340 reservoir_remaining 0 floor 25920 gas_used 20053599; data_size 340 write_records 0; logs 0 accounts 5",
  "Transaction, Compute, gas limit 300000000, plain": "revert MegaLimitExceeded(ComputeGas, 20000381); stop ComputeGas limit 20000381 used 19999281; regular 20023679 state 0 history 29920 history_bytes 340 reservoir_remaining 99970080 floor 25920 gas_used 20053599; data_size 340 write_records 0; logs 0 accounts 5",
  "Transaction, Compute, gas limit 300000000, revived": "revert MegaLimitExceeded(ComputeGas, 20000381); stop ComputeGas limit 20000381 used 19999281; regular 20023679 state 0 history 29920 history_bytes 340 reservoir_remaining 99970080 floor 25920 gas_used 20053599; data_size 340 write_records 0; logs 0 accounts 5",
  "Transaction, DataSize, gas limit 100000000, plain": "revert MegaLimitExceeded(DataSize, 492); stop DataSize limit 492 used 493; regular 46871 state 0 history 33528 history_bytes 381 reservoir_remaining 0 floor 28544 gas_used 80399; data_size 381 write_records 0; logs 0 accounts 5",
  "Transaction, DataSize, gas limit 100000000, revived": "revert MegaLimitExceeded(DataSize, 492); stop DataSize limit 492 used 493; regular 46871 state 0 history 33528 history_bytes 381 reservoir_remaining 0 floor 28544 gas_used 80399; data_size 381 write_records 0; logs 0 accounts 5",
  "Transaction, DataSize, gas limit 300000000, plain": "revert MegaLimitExceeded(DataSize, 492); stop DataSize limit 492 used 493; regular 46871 state 0 history 33528 history_bytes 381 reservoir_remaining 99966472 floor 28544 gas_used 80399; data_size 381 write_records 0; logs 0 accounts 5",
  "Transaction, DataSize, gas limit 300000000, revived": "revert MegaLimitExceeded(DataSize, 492); stop DataSize limit 492 used 493; regular 46871 state 0 history 33528 history_bytes 381 reservoir_remaining 99966472 floor 28544 gas_used 80399; data_size 381 write_records 0; logs 0 accounts 5",
  "Transaction, KvUpdates, gas limit 100000000, plain": "revert MegaLimitExceeded(KVUpdate, 1); stop KVUpdate limit 1 used 2; regular 46871 state 0 history 33528 history_bytes 381 reservoir_remaining 0 floor 28544 gas_used 80399; data_size 381 write_records 0; logs 0 accounts 5",
  "Transaction, KvUpdates, gas limit 100000000, revived": "revert MegaLimitExceeded(KVUpdate, 1); stop KVUpdate limit 1 used 2; regular 46871 state 0 history 33528 history_bytes 381 reservoir_remaining 0 floor 28544 gas_used 80399; data_size 381 write_records 0; logs 0 accounts 5",
  "Transaction, KvUpdates, gas limit 300000000, plain": "revert MegaLimitExceeded(KVUpdate, 1); stop KVUpdate limit 1 used 2; regular 46871 state 0 history 33528 history_bytes 381 reservoir_remaining 99966472 floor 28544 gas_used 80399; data_size 381 write_records 0; logs 0 accounts 5",
  "Transaction, KvUpdates, gas limit 300000000, revived": "revert MegaLimitExceeded(KVUpdate, 1); stop KVUpdate limit 1 used 2; regular 46871 state 0 history 33528 history_bytes 381 reservoir_remaining 99966472 floor 28544 gas_used 80399; data_size 381 write_records 0; logs 0 accounts 5",
  "Transaction, StateGas, gas limit 100000000, plain": "revert MegaLimitExceeded(StateGrowth, 281519); stop StateGrowth limit 281519 used 281520; regular 46871 state 0 history 33528 history_bytes 381 reservoir_remaining 0 floor 28544 gas_used 80399; data_size 381 write_records 0; logs 0 accounts 5",
  "Transaction, StateGas, gas limit 100000000, revived": "revert MegaLimitExceeded(StateGrowth, 281519); stop StateGrowth limit 281519 used 281520; regular 46871 state 0 history 33528 history_bytes 381 reservoir_remaining 0 floor 28544 gas_used 80399; data_size 381 write_records 0; logs 0 accounts 5",
  "Transaction, StateGas, gas limit 300000000, plain": "revert MegaLimitExceeded(StateGrowth, 281519); stop StateGrowth limit 281519 used 281520; regular 46871 state 0 history 33528 history_bytes 381 reservoir_remaining 99966472 floor 28544 gas_used 80399; data_size 381 write_records 0; logs 0 accounts 5",
  "Transaction, StateGas, gas limit 300000000, revived": "revert MegaLimitExceeded(StateGrowth, 281519); stop StateGrowth limit 281519 used 281520; regular 46871 state 0 history 33528 history_bytes 381 reservoir_remaining 99966472 floor 28544 gas_used 80399; data_size 381 write_records 0; logs 0 accounts 5"
}
