crates/mega-evm/tests/satin/snapshots/satin__stops__an_answer_three_calls_down_stops_the_transaction_at_either_tier.snap
---
source: crates/mega-evm/tests/satin/stops.rs
expression: "&summaries(&views)"
---
{
  "NewAccount, gas limit 100000000, not rewritten": "revert MegaLimitExceeded(StateGrowth, 183599); stop StateGrowth limit 183599 used 183600; regular 54550 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 81830; data_size 310 write_records 0; logs 0 accounts 5",
  "NewAccount, gas limit 100000000, rewritten": "revert MegaLimitExceeded(StateGrowth, 183599); stop StateGrowth limit 183599 used 183600; regular 54550 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 81830; data_size 310 write_records 0; logs 0 accounts 5",
  "NewAccount, gas limit 100000000, twin": "revert -; stop -; regular 54562 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 81842; data_size 310 write_records 0; logs 0 accounts 5",
  "NewAccount, gas limit 300000000, not rewritten": "revert MegaLimitExceeded(StateGrowth, 183599); stop StateGrowth limit 183599 used 183600; regular 54550 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 81830; data_size 310 write_records 0; logs 0 accounts 5",
  "NewAccount, gas limit 300000000, rewritten": "revert MegaLimitExceeded(StateGrowth, 183599); stop StateGrowth limit 183599 used 183600; regular 54550 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 81830; data_size 310 write_records 0; logs 0 accounts 5",
  "NewAccount, gas limit 300000000, twin": "revert -; stop -; regular 54562 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 81842; data_size 310 write_records 0; logs 0 accounts 5",
  "PastTheAllowance, gas limit 100000000, not rewritten": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 7849; regular 22849 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 50129; data_size 310 write_records 0; logs 0 accounts 5",
  "PastTheAllowance, gas limit 100000000, rewritten": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 7849; regular 22849 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 50129; data_size 310 write_records 0; logs 0 accounts 5",
  "PastTheAllowance, gas limit 300000000, not rewritten": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 7849; regular 22849 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 50129; data_size 310 write_records 0; logs 0 accounts 5",
  "PastTheAllowance, gas limit 300000000, rewritten": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 7849; regular 22849 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 50129; data_size 310 write_records 0; logs 0 accounts 5",
  "Precompile, gas limit 100000000, not rewritten": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 5362; regular 20362 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 47642; data_size 310 write_records 0; logs 0 accounts 5",
  "Precompile, gas limit 100000000, rewritten": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 5362; regular 20362 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 47642; data_size 310 write_records 0; logs 0 accounts 5",
  "Precompile, gas limit 300000000, not rewritten": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 5362; regular 20362 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 47642; data_size 310 write_records 0; logs 0 accounts 5",
  "Precompile, gas limit 300000000, rewritten": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 5362; regular 20362 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 47642; data_size 310 write_records 0; logs 0 accounts 5"
}
